refactor and add prop types

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axomic-frontend-test",
+  "name": "redux-forum-experiement",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
