--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "redux-forum-experiement",
+  "name": "forum-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fetch-mock": "^8.2.1",
+    "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
