--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: npm deploy
-        run: npm run deploy
+        run: |
+          npm install
+          npm run deploy
         env:
           CI: true
